--- a/template.yml
+++ b/template.yml
@@ -1,17 +1,15 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
-Description: Create an API gateway with triggered Lambda function
-      
-  Function:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: ./
-      FunctionName: HelloWorldFunction-GitHub
-      Handler: Lambda_function.lambda_handler
-      Runtime: python3.8
+service: GitHubActions
+provider:
+  name: aws
+  runtime: python3.7
+  region: eu-central-1 
+  
+Functions:
+  HelloWorldFunction-GitHub:
+      Handler: handler/aws.lambda_handler
+      Runtime: python3.7
       Timeout: 300
       MemorySize: 256
-      AutoPublishAlias: DEV
       Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
@@ -23,26 +21,20 @@ Description: Create an API gateway with triggered Lambda function
           Properties:
             Path: /Hello
             Method: get
-            
-  Function2:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: ./
-      FunctionName: PostFunction-GitHub
-      Handler: Lambda_function2.lambda_handler2
-      Runtime: python3.8
+
+  PostFunction-GitHub:
+      Handler: handler/aws.lambda_handler
+      Runtime: python3.7
       Timeout: 300
       MemorySize: 256
-      AutoPublishAlias: DEV
       Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-        - AmazonDynamoDBFullAccess
       Events:
         MyApi:
           Type: Api
           Properties:
-            Path: /customer
+            Path: /Customer
             Method: post
