--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: CI CD AWS GitHub actions
 
 # Controls when the action will run. 
 on:
@@ -10,27 +8,51 @@ on:
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: [3.8]    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    #does this mean that the files in my github repo are accessible by this YAML file?
+    - uses: actions/checkout@v2
+    
+    #installs a version of python, but I need this if deploying to a severless Python Lambda?
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    
+    #credentials to connect to AWS
+    - name: Configure AWS credentials from Admin account
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
+        profile_name: default
+        runtime: python3.8
+    
+    # Runs a set of commands using the runners shell; THIS DOESN'T WORK
+    - name: Run multiple commands for install environment
+      run: |
+         #install PIP
+         python -m pip install pip --upgrade pip
+         #install all dependencies as defined by requirements.txt in the current directory
+         pip3 install -r requirements.txt
+         npm install
+         #ensuring current working directory is accessible by the function--this might not be doing anything
+         export PATH=$PATH:$(pwd)
+    
+    #Deploy main.py to AWS
+    - name: Serverless
+      uses: serverless/github-action@master
+      with:
+        args: deploy --region eu-central-1
