--- a/serverless.yml
+++ b/serverless.yml
@@ -4,37 +4,37 @@ provider:
   runtime: python3.7
   region: eu-central-1 
   
-Functions:
+functions:
   HelloWorldFunction-GitHub:
-      Handler: Lambda_function.lambda_handler
-      Runtime: python3.7
-      Timeout: 300
-      MemorySize: 256
-      Policies:
+      handler: Lambda_function.lambda_handler
+      runtime: python3.7
+      timeout: 300
+      memorySize: 256
+      policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      Events:
+      events:
         MyApi:
-          Type: Api
-          Properties:
-            Path: /Hello
-            Method: get
+          type: api
+          properties:
+            path: /Hello
+            method: get
 
   PostFunction-GitHub:
-      Handler: Lambda_function2.lambda_handler2
-      Runtime: python3.7
-      Timeout: 300
-      MemorySize: 256
-      Policies:
+      handler: Lambda_function2.lambda_handler2
+      handler: python3.7
+      timeout: 300
+      memorySize: 256
+      policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      Events:
+      events:
         MyApi:
-          Type: Api
-          Properties:
-            Path: /Customer
-            Method: post
+          type: Api
+          properties:
+            path: /Customer
+            method: post
