--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   
 Functions:
   HelloWorldFunction-GitHub:
-      Handler: handler/aws.lambda_handler
+      Handler: Lambda_function.lambda_handler
       Runtime: python3.8
       Timeout: 300
       MemorySize: 256
@@ -23,7 +23,7 @@ Functions:
             Method: get
 
   PostFunction-GitHub:
-      Handler: handler/aws.lambda_handler
+      Handler: Lambda_function2.lambda_handler2
       Runtime: python3.8
       Timeout: 300
       MemorySize: 256
