--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,6 @@ provider:
   runtime: python3.8
   region: eu-central-1 
   
-Functions:
   HelloWorldFunction-GitHub:
       Handler: Lambda_function.lambda_handler
       Runtime: python3.8
@@ -36,4 +35,4 @@ Functions:
         MyApi:
           Type: Api
           Properties:
-            Path: /Custom
+            Path: /Customer
