--- a/serverless.yml
+++ b/serverless.yml
@@ -3,36 +3,37 @@ provider:
   name: aws
   runtime: python3.8
   region: eu-central-1 
-  
+functions:  
   HelloWorldFunction-GitHub:
-      Handler: Lambda_function.lambda_handler
-      Runtime: python3.8
-      Timeout: 300
-      MemorySize: 256
-      Policies:
+      handler: Lambda_function.lambda_handler
+      runtime: python3.8
+      timeout: 300
+      memorySize: 256
+      policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      Events:
+      events:
         MyApi:
-          Type: Api
-          Properties:
-            Path: /Hello
-            Method: get
+          type: Api
+          properties:
+            path: /Hello
+            method: get
 
   PostFunction-GitHub:
-      Handler: Lambda_function2.lambda_handler2
-      Runtime: python3.8
-      Timeout: 300
-      MemorySize: 256
-      Policies:
+      handler: Lambda_function2.lambda_handler2
+      runtime: python3.8
+      timeout: 300
+      memorySize: 256
+      policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      Events:
+      events:
         MyApi:
-          Type: Api
-          Properties:
-            Path: /Customer
+          type: Api
+          properties:
+            path: /Customer
+            method: post
