--- a/serverless.yml
+++ b/serverless.yml
@@ -3,37 +3,38 @@ provider:
   name: aws
   runtime: python3.8
   region: eu-central-1 
+  
 functions:  
   HelloWorldFunction-GitHub:
-      handler: Lambda_function.lambda_handler
-      runtime: python3.8
-      timeout: 300
-      memorySize: 256
-      policies:
+      Handler: Lambda_function.lambda_handler
+      Runtime: python3.8
+      Timeout: 300
+      MemorySize: 256
+      Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      events:
+      Events:
         MyApi:
-          type: Api
-          properties:
-            path: /Hello
-            method: get
+          Type: Api
+          Properties:
+            Path: /Hello
+            Method: get
 
   PostFunction-GitHub:
-      handler: Lambda_function2.lambda_handler2
-      runtime: python3.8
-      timeout: 300
-      memorySize: 256
-      policies:
+      Handler: Lambda_function2.lambda_handler2
+      Runtime: python3.8
+      Timeout: 300
+      MemorySize: 256
+      Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
-      events:
+      Events:
         MyApi:
-          type: Api
-          properties:
-            path: /Customer
-            method: post
+          Type: Api
+          Properties:
+            Path: /Customer
+            Method: post
