--- a/serverless.yml
+++ b/serverless.yml
@@ -4,12 +4,16 @@ provider:
   runtime: python3.8
   region: eu-central-1 
   
-functions:  
-  HelloWorldFunction-GitHub:
+Function:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./
+      FunctionName: HelloWorldFunction-GitHub
       Handler: Lambda_function.lambda_handler
       Runtime: python3.8
       Timeout: 300
       MemorySize: 256
+      AutoPublishAlias: DEV
       Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
@@ -21,20 +25,26 @@ functions:
           Properties:
             Path: /Hello
             Method: get
-
-  PostFunction-GitHub:
+            
+  Function2:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./
+      FunctionName: PostFunction-GitHub
       Handler: Lambda_function2.lambda_handler2
       Runtime: python3.8
       Timeout: 300
       MemorySize: 256
+      AutoPublishAlias: DEV
       Policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
         - CloudWatchLogsFullAccess
         - AWSLambdaBasicExecutionRole
+        - AmazonDynamoDBFullAccess
       Events:
         MyApi:
           Type: Api
           Properties:
-            Path: /Customer
+            Path: /customer
             Method: post
