--- a/serverless.yml
+++ b/serverless.yml
@@ -1,42 +1,52 @@
+AWSTemplateFormatVersion: '2010-09-09'
+Transform: AWS::Serverless-2016-10-31
 service: GitHubActions
 provider:
   name: aws
   runtime: python3.8
   region: eu-central-1 
-  
-Function:
-  Handler: Lambda_function.lambda_handler
-  Runtime: python3.8
-  Timeout: 300
-  MemorySize: 256
-  AutoPublishAlias: DEV
-  Policies:
-    - AmazonS3FullAccess
-    - AmazonTextractFullAccess
-    - CloudWatchLogsFullAccess
-    - AWSLambdaBasicExecutionRole
-  Events:
-    MyApi:
-      Type: Api
-      Properties:
-        Path: /Hello
-        Method: get
+
+  Function:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./
+      FunctionName: HelloWorldFunction-GitHub
+      Handler: Lambda_function.lambda_handler
+      Runtime: python3.8
+      Timeout: 300
+      MemorySize: 256
+      AutoPublishAlias: DEV
+      Policies:
+        - AmazonS3FullAccess
+        - AmazonTextractFullAccess
+        - CloudWatchLogsFullAccess
+        - AWSLambdaBasicExecutionRole
+      Events:
+        MyApi:
+          Type: Api
+          Properties:
+            Path: /Hello
+            Method: get
             
   Function2:
-    Handler: Lambda_function2.lambda_handler2
-    Runtime: python3.8
-    Timeout: 300
-    MemorySize: 256
-    AutoPublishAlias: DEV
-    Policies:
-      - AmazonS3FullAccess
-      - AmazonTextractFullAccess
-      - CloudWatchLogsFullAccess
-      - AWSLambdaBasicExecutionRole
-      - AmazonDynamoDBFullAccess
-    Events:
-      MyApi:
-        Type: Api
-        Properties:
-          Path: /customer
-          Method: post
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./
+      FunctionName: PostFunction-GitHub
+      Handler: Lambda_function2.lambda_handler2
+      Runtime: python3.8
+      Timeout: 300
+      MemorySize: 256
+      AutoPublishAlias: DEV
+      Policies:
+        - AmazonS3FullAccess
+        - AmazonTextractFullAccess
+        - CloudWatchLogsFullAccess
+        - AWSLambdaBasicExecutionRole
+        - AmazonDynamoDBFullAccess
+      Events:
+        MyApi:
+          Type: Api
+          Properties:
+            Path: /customer
+            Method: post
