--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]    
+    runs-on: ubuntu-latest  
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     
@@ -27,7 +24,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
     
     
     #credentials to connect to AWS
@@ -37,9 +34,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
-        profile_name: default
-        runtime: python3.8
-    
     # Runs a set of commands using the runners shell; THIS DOESN'T WORK
     - name: Run multiple commands for install environment
       run: |
