--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
 
     #Deploy main.py to AWS
     - name: Serverless
-      uses: dhollerbach/github-action-serverless-with-python-requirements@master
+      uses: serverless/github-action@master
       with:
-        args: deploy --region eu-central-1
+        args: deploy
