--- a/serverless.yml
+++ b/serverless.yml
@@ -5,13 +5,14 @@ provider:
   runtime: python3.8
   stage: dev
   region: eu-central-1
-Resources:      
+  
+resources:      
     function1:
       handler: Lambda_function.lambda_handler
       runtime: python3.8
       timeout: 300
       memorySize: 256
-      Policies:
+      policies:
           - AmazonS3FullAccess
           - AmazonTextractFullAccess
           - CloudWatchLogsFullAccess
