--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ functions:
       runtime: python3.8
       timeout: 300
       memorySize: 256
-      policies:
+      Policies:
           - AmazonS3FullAccess
           - AmazonTextractFullAccess
           - CloudWatchLogsFullAccess
@@ -27,7 +27,7 @@ functions:
       runtime: python3.8
       timeout: 300
       memorySize: 256
-      policies:
+      Policies:
           - AmazonS3FullAccess
           - AmazonTextractFullAccess
           - CloudWatchLogsFullAccess
