--- a/serverless.yml
+++ b/serverless.yml
@@ -7,33 +7,34 @@ provider:
   region: eu-central-1
 resources:
   Resources:
+    Functions:
         hello:
-          handler: Lambda_function.lambda_handler
-          runtime: python3.8
-          timeout: 300
-          memorySize: 256
+          Handler: Lambda_function.lambda_handler
+          Runtime: python3.8
+          Timeout: 300
+          MemorySize: 256
           Policies:
               - AmazonS3FullAccess
               - AmazonTextractFullAccess
               - CloudWatchLogsFullAccess
               - AWSLambdaBasicExecutionRole
-          events:
+          Events:
            - http:
-              path: /Hello
-              method: get
+              Path: /Hello
+              Method: get
 
         PostFonction:
-          handler: Lambda_function2.lambda_handler2
-          runtime: python3.8
-          timeout: 300
-          memorySize: 256
+          Handler: Lambda_function2.lambda_handler2
+          Runtime: python3.8
+          Timeout: 300
+          MemorySize: 256
           Policies:
               - AmazonS3FullAccess
               - AmazonTextractFullAccess
               - CloudWatchLogsFullAccess
               - AWSLambdaBasicExecutionRole
               - AmazonDynamoDBFullAccess
-          events:
+          Events:
            - http:
-              path: /customer
-              method: post
+              Path: /customer
+              Method: post
