--- a/serverless.yml
+++ b/serverless.yml
@@ -2,38 +2,39 @@ service: GitHubActions
 
 provider:
   name: aws
-  runtime: python3.8
+  runtime: python3.7
   stage: dev
   region: eu-central-1
-  Resources:
-    Functions:
-          Hello:
-          Handler: Lambda_function.lambda_handler
-          Runtime: python3.8
-          Timeout: 300
-          MemorySize: 256
-          Policies:
-              - AmazonS3FullAccess
-              - AmazonTextractFullAccess
-              - CloudWatchLogsFullAccess
-              - AWSLambdaBasicExecutionRole
-          Events:
-           - http:
-              Path: /Hello
-              Method: get
 
-          PostFonction:
-          Handler: Lambda_function2.lambda_handler2
-          Runtime: python3.8
-          Timeout: 300
-          MemorySize: 256
-          Policies:
-              - AmazonS3FullAccess
-              - AmazonTextractFullAccess
-              - CloudWatchLogsFullAccess
-              - AWSLambdaBasicExecutionRole
-              - AmazonDynamoDBFullAccess
-          Events:
-           - http:
-              Path: /customer
-              Method: post
+
+functions:
+  hello:
+    handler: Lambda_function.lambda_handler
+    runtime: python3.7
+    timeout: 300
+    memorySize: 256
+    policies:
+        - AmazonS3FullAccess
+        - AmazonTextractFullAccess
+        - CloudWatchLogsFullAccess
+        - AWSLambdaBasicExecutionRole
+    events:
+     - http:
+        path: /Hello
+        method: get
+
+  postFonction:
+    handler: Lambda_function2.lambda_handler2
+    runtime: python3.7
+    timeout: 300
+    memorySize: 256
+    policies:
+        - AmazonS3FullAccess
+        - AmazonTextractFullAccess
+        - CloudWatchLogsFullAccess
+        - AWSLambdaBasicExecutionRole
+        - AmazonDynamoDBFullAccess
+    events:
+     - http:
+        path: /customer
+        method: post
