--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,7 @@ provider:
   runtime: python3.8
   stage: dev
   region: eu-central-1
+  endpointType: REGIONAL
 
 
 functions:
@@ -13,6 +14,7 @@ functions:
     runtime: python3.8
     timeout: 300
     memorySize: 256
+    autoPublishAlias: DEV
     policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
@@ -28,6 +30,7 @@ functions:
     runtime: python3.8
     timeout: 300
     memorySize: 256
+    autoPublishAlias: DEV
     policies:
         - AmazonS3FullAccess
         - AmazonTextractFullAccess
